@@ -1,3 +1,8 @@
+2006-06-28  Brian Warner  <warner@lothar.com>
+
+	* buildbot/scripts/runner.py (SlaveOptions.longdesc): remove
+	obsolete reference to mktap.
+
 2006-06-20  Brian Warner  <warner@lothar.com>
 
 	* buildbot/test/test_steps.py (BuildStep.testShellCommand1): update
